<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_image"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:padding="10dp" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/score"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/display_back"
        android:layoutDirection="ltr"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="none">

        <TextView
            android:id="@+id/numDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="right"
            android:text=""
            android:textColor="@color/white"
            android:textSize="70sp" />

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/num_pad"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/score_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/num_pad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:weightSum="4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/num7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:text="@string/num7"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <Button
                android:id="@+id/num8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:text="@string/num8"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <Button
                android:id="@+id/num9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:text="@string/num9"
                android:textColor="@color/white"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/num4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:text="@string/num4"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <Button
                android:id="@+id/num5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:text="@string/num5"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <Button
                android:id="@+id/num6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:text="@string/num6"
                android:textColor="@color/white"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:id="@+id/num1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:text="@string/num1"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <Button
                android:id="@+id/num2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:text="@string/num2"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <Button
                android:id="@+id/num3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:text="@string/num3"
                android:textColor="@color/white"
                android:textSize="60sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:clickable="false" />

            <Button
                android:id="@+id/num0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:text="@string/num0"
                android:textColor="@color/white"
                android:textSize="60sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/num_btn"
                android:backgroundTintMode="screen"
                android:clickable="false" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>